--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <title>Crypto Watch</title>
+  <link rel="stylesheet" href="https://bootswatch.com/4/pulse/bootstrap.min.css">
+  <title>CryptoWatch</title>
 </head>
 
 <body>
